MacViews: Fix ink drop highlights disappearing on click.

On Mac, material design ripples are disabled. This causes a bug where the
highlight that shows up when a normally-ripple-enabled button is hovered
suddenly disappears when the button is clicked. This is especially noticeable on
long-pressing buttons, where there is no visual indicator to show the button is
still pressed, even when the mouse button is still being held down.

Fix by allowing the highlight to show on ripple on Mac.

Bug: 795224
Change-Id: Ibc5a0cce4d50c3b4e6a77763ec50af264c1db2d0
Reviewed-on: https://chromium-review.googlesource.com/896724
Reviewed-by: Mohsen Izadi <mohsen@chromium.org>
Commit-Queue: Patti <patricialor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534573}
Former-commit-id: 9719e6fd16213f6ea9e99f81ef00a42b8af930b4